app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: app-deployment
 labels:
   app: app
spec:
 replicas: 3
 selector:
   matchLabels:
     app: app
 template:
   metadata:
     labels:
       app: app
   spec:
     containers:
     - name: app
       image: docker.io/christoslab/devops-docker_django:latest
       ports:
       - containerPort: 8080
