app-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
 name: app-loadbalancer-service
spec:
 selector:
   component: app
 type: LoadBalancer
 ports:
   - protocol: TCP
     port: 8081
     targetPort: 8081
     nodePort: 30000
