app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: app-ingress
spec:
 rules:
 - host: clamprou.cloudns.ph
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: app-service
           port:
             number: 80

 tls:
   - hosts:
      - clamprou.cloudns.ph
     secretName: tls-secret
